add: cursore pointers

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
             <div class="default"><i class="fa-solid fa-ghost"></i> default</div>
           </div>
           <div class="right-setting">
-            <p>15</p>
-            <p>30</p>
-            <p>60</p>
-            <p>120</p>
+            <div>15</div>
+            <div>30</div>
+            <div>60</div>
+            <div>120</div>
           </div>
         </div>
         <div class="text-section">
