modified: index.html

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         </div>
         <div class="right-footer">
           <div class="sachu"><i class="fa-solid fa-award"></i> Sushil.dev</div>
-          <div class="abhi"><i class="fa-solid fa-award"></i> Abhishak.dev</div>
+          <div class="abhi"><i class="fa-solid fa-award"></i> Abhishek.dev</div>
         </div>
       </div>
       <div class="device-warning">
