--- a/index.html
+++ b/index.html
@@ -29,6 +29,33 @@
           <div class="right-header">
             <i class="fa-solid fa-bell"></i>
             <i class="fa-regular fa-user"></i>
+            <i class="fa-solid fa-bars"></i>
+          </div>
+          <div class="sidebar">
+            <div class="logo-col">
+              <p>PandaTyping</p>
+              <img src="icons/panda.png">
+            </div>
+            <div class="col">
+              <i class="fa-solid fa-keyboard"></i>
+              <p>Practice</p>
+            </div>
+            <div class="col">
+              <i class="fa-solid fa-chart-simple"></i>
+              <p>Profile</p>
+            </div>
+            <div class="col">
+              <i class="fa-solid fa-trophy"></i>
+              <p>Highscore</p>
+            </div>
+            <div class="col">
+              <i class="fa-solid fa-palette"></i>
+              <p>Themes</p>
+            </div>
+            <div class="col">
+              <i class="fa-regular fa-circle-question"></i>
+              <p>Info</p>
+            </div>
           </div>
         </div>
         <!-- settings -->
