Add: Profile section

--- a/index.html
+++ b/index.html
@@ -29,33 +29,36 @@
           <div class="right-header">
             <i class="fa-solid fa-bell"></i>
             <i class="fa-regular fa-user"></i>
-            <i class="fa-solid fa-bars"></i>
           </div>
           <div class="sidebar">
             <div class="logo-col">
               <p>PandaTyping</p>
               <img src="icons/panda.png">
             </div>
-            <div class="col">
+            <a href="index.html" class="col">
               <i class="fa-solid fa-keyboard"></i>
               <p>Practice</p>
-            </div>
-            <div class="col">
+            </a>
+            <a href="profile.html" class="col">
               <i class="fa-solid fa-chart-simple"></i>
               <p>Profile</p>
-            </div>
-            <div class="col">
+            </a>
+            <a href="" class="col">
               <i class="fa-solid fa-trophy"></i>
               <p>Highscore</p>
-            </div>
-            <div class="col">
+            </a>
+            <a href="" class="col">
+              <i class="fa-solid fa-jet-fighter"></i>
+              Typing Test
+            </a>
+            <a href="" class="col">
               <i class="fa-solid fa-palette"></i>
               <p>Themes</p>
-            </div>
-            <div class="col">
+            </a>
+            <a href="" class="col">
               <i class="fa-regular fa-circle-question"></i>
               <p>Info</p>
-            </div>
+            </a>
           </div>
         </div>
         <!-- settings -->
