--- a/highscore.html
+++ b/highscore.html
@@ -18,60 +18,45 @@
       referrerpolicy="no-referrer"
     />
     <!-- style -->
-    <link rel="stylesheet" href="styles/profile.css" />
+    <link rel="stylesheet" href="styles/highscore.css" />
     <title>Typing Panda</title>
   </head>
   <body>
     <div class="container">
       <div class="main">
-        <h1>Profile <span>@Sensei</span></h1>
-        <div class="stat-col">
-          <h1>All Time Statistics</h1>
-          <div class="stats-grid-container">
-            <div class="stat-grid">
-              <p>Time:</p>
-              <h2>00:14:13</h2>
+        <h1>World Ranking</h1>
+        <div class="ranking-container">
+          <h1>Highscore:</h1>
+          <div class="user-ranks">
+            <div class="fixed-header">
+              <span>#</span>
+              <span>Users</span>
+              <span>Speed</span>
+              <span>Score</span>
             </div>
-            <div class="stat-grid">
-              <p>Lessons:</p>
-              <h2>13</h2>
+            <div class="rank-col">
+              <span>1.</span>
+              <span>Sensei</span>
+              <span>291 wpm</span>
+              <span>130000</span>
             </div>
-            <div class="stat-grid">
-              <p>Top Speed:</p>
-              <h2>120wpm</h2>
+            <div class="rank-col">
+              <span>1.</span>
+              <span>Sensei</span>
+              <span>291 wpm</span>
+              <span>130000</span>
             </div>
-            <div class="stat-grid">
-              <p>Avg Speed:</p>
-              <h2>90wpm</h2>
+            <div class="rank-col">
+              <span>1.</span>
+              <span>Sensei</span>
+              <span>291 wpm</span>
+              <span>130000</span>
             </div>
-            <div class="stat-grid">
-              <p>Avg Accuracy:</p>
-              <h2>94.09%</h2>
-            </div>
-          </div>
-        </div>
-        <div class="stat-col">
-          <h1>Statistics for Today</h1>
-          <div class="stats-grid-container">
-            <div class="stat-grid">
-              <p>Time:</p>
-              <h2>00:14:13</h2>
-            </div>
-            <div class="stat-grid">
-              <p>Lessons:</p>
-              <h2>13</h2>
-            </div>
-            <div class="stat-grid">
-              <p>Top Speed:</p>
-              <h2>120wpm</h2>
-            </div>
-            <div class="stat-grid">
-              <p>Avg Speed:</p>
-              <h2>90wpm</h2>
-            </div>
-            <div class="stat-grid">
-              <p>Avg Accuracy:</p>
-              <h2>94.09%</h2>
+            <div class="rank-col">
+              <span>1.</span>
+              <span>Sensei</span>
+              <span>291 wpm</span>
+              <span>130000</span>
             </div>
           </div>
         </div>
@@ -90,7 +75,7 @@
             <i class="fa-solid fa-chart-simple"></i>
             <p>Profile</p>
           </a>
-          <a href="highscore.html" class="col">
+          <a href="" class="col">
             <i class="fa-solid fa-trophy"></i>
             <p>Highscore</p>
           </a>
