--- a/index.html
+++ b/index.html
@@ -86,9 +86,6 @@
           </div>
         </div>
         <div class="text-section">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore saepe
-          inventore eius laudantium veritatis incidunt iusto alias recusandae,
-          quod pariatur.
         </div>
         <!-- keyboard -->
         <div class="keyboard">
@@ -323,7 +320,7 @@
       </div>
     </div>
     <!-- scripts -->
-    <script src="scripts/app.js"></script>
+    <script type="module" src="scripts/app.js"></script>
     <script src="https://unpkg.com/feather-icons"></script>
   </body>
 </html>
