biult: start method

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
           </div>
         </div>
         <div class="text-section">
+          <div class="modal">Press any Key to start</div>
         </div>
         <!-- keyboard -->
         <div class="keyboard">
