--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     />
     <!-- style -->
     <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="shortcut icon" type="x-icon" href="icons/panda.png">
     <title>Typing Panda</title>
   </head>
   <body>
