--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
             </div>
             <!-- num -->
             <div class="numbers">
-              <i class="fa-solid fa-hashtag"></i> numbers
+              <i class="fa-solid fa-font"></i> capitals
             </div>
           </div>
           <div class="middle-setting">
-            <div class="time"><i class="fa-solid fa-clock"></i> time</div>
-            <div class="words"><i class="fa-solid fa-font"></i> words</div>
+            <div class="words"><i class="fa-solid fa-font"></i> sentences</div>
             <div class="default"><i class="fa-solid fa-ghost"></i> default</div>
           </div>
           <div class="right-setting">
+            <div class="time"><i class="fa-solid fa-clock"></i> time</div>
             <div>15</div>
             <div>30</div>
             <div>60</div>
