build: added option selection

--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
               <i class="fa-solid fa-quote-left"></i> punctuation
             </div>
             <!-- num -->
-            <div class="numbers">
+            <div class="capital">
               <i class="fa-solid fa-font"></i> capitals
             </div>
           </div>
           <div class="middle-setting">
             <div class="default"><i class="fa-solid fa-ghost"></i> default</div>
           </div>
-          <div class="right-setting">
+          <div class="right-setting sentences">
             <div class="words"><i class="fa-solid fa-font"></i> sentences</div>
             <div>2</div>
             <div>3</div>
