--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   </head>
   <body>
     <div class="container">
+      <div class="speed">Speed WPM</div>
       <div class="sidebar">
         <div class="logo-col">
           <p>PandaTyping</p>
