biuld: acuray cal

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <body>
     <div class="container">
       <div class="speed">-:- WPM</div>
+      <div class="acuracy">-:- %</div>
       <div class="sidebar">
         <div class="logo-col">
           <p>PandaTyping</p>
@@ -87,7 +88,7 @@
           </div>
         </div>
         <div class="text-section">
-          <div class="modal">Press any Key to start</div>
+          <div class="modal">Press Enter Key to start</div>
         </div>
         <!-- keyboard -->
         <div class="keyboard">
