fix: score dispaly

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   </head>
   <body>
     <div class="container">
-      <div class="speed">-:- WPM</div>
-      <div class="acuracy">-:- %</div>
+      <div class="speed"></div>
+      <div class="acuracy"></div>
       <div class="sidebar">
         <div class="logo-col">
           <p>PandaTyping</p>
