--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <body>
     <div class="container">
       <div class="speed"></div>
+      <div class="timer">00:00</div>
       <div class="acuracy"></div>
       <div class="sidebar">
         <div class="logo-col">
