--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
       </div>
       <div class="device-warning">
         <h1>Warning</h1>
-        <p>Apologies for the inconvenience! Your current device is not compatible. Stay tuned for future updates. Thank you for your understanding.</p>
+        <p>Apologies for the inconvenience! Your current device is not compatible. Stay tuned for future updates. (Try pressing ctrl + - to zoom out if on a computer)</p>
       </div>
     </div>
     <!-- scripts -->
