fix: footer links

--- a/index.html
+++ b/index.html
@@ -308,14 +308,14 @@
       </div>
       <div class="footer">
         <div class="left-footer">
-          <div class="contact"><i class="fa-solid fa-envelope"></i> Contact</div>
-          <div class="gitHub"><i class="fa-brands fa-github"></i> Github</div>
-          <div class="GitHub"><i class="fa-brands fa-square-x-twitter"></i> Twitter</div>
-          <div class="source-code"><i class="fa-solid fa-code"></i> Source Code</div>
+          <a href="https://twitter.com/sachu0dev" target="_blank" class="contact"><i class="fa-solid fa-envelope"></i> Contact</a>
+          <a href="https://twitter.com/sachu0dev" target="_blank" class="gitHub"><i class="fa-brands fa-github"></i> Github</a>
+          <a href="https://twitter.com/sachu0dev" target="_blank" class="GitHub"><i class="fa-brands fa-square-x-twitter"></i> Twitter</a>
+          <a href="https://github.com/sachu0dev/TypingPanda" target="_blank" class="source-code"><i class="fa-solid fa-code"></i> Source Code</a>
         </div>
         <div class="right-footer">
-          <div class="sachu"><i class="fa-solid fa-award"></i> Sushil.dev</div>
-          <div class="abhi"><i class="fa-solid fa-award"></i> Abhishek.dev</div>
+          <a href="https://twitter.com/sachu0dev" class="sachu"><i class="fa-solid fa-award"></i> Sushil.dev</a>
+          <!-- <div class="abhi"><i class="fa-solid fa-award"></i> Abhishek.dev</div> -->
         </div>
       </div>
       <div class="device-warning">
