build: score profile

--- a/profile.html
+++ b/profile.html
@@ -30,23 +30,23 @@
           <div class="stats-grid-container">
             <div class="stat-grid">
               <p>Time:</p>
-              <h2>00:14:13</h2>
+              <h2 class="all-time">00:14:13</h2>
             </div>
             <div class="stat-grid">
               <p>Lessons:</p>
-              <h2>13</h2>
+              <h2 class="all-lessons">13</h2>
             </div>
             <div class="stat-grid">
               <p>Top Speed:</p>
-              <h2>120wpm</h2>
+              <h2 class="all-top-speed">120wpm</h2>
             </div>
             <div class="stat-grid">
               <p>Avg Speed:</p>
-              <h2>90wpm</h2>
+              <h2 class="all-avg-speed">90wpm</h2>
             </div>
             <div class="stat-grid">
               <p>Avg Accuracy:</p>
-              <h2>94.09%</h2>
+              <h2 class="all-avg-accuracy">94.09%</h2>
             </div>
           </div>
         </div>
@@ -55,23 +55,23 @@
           <div class="stats-grid-container">
             <div class="stat-grid">
               <p>Time:</p>
-              <h2>00:14:13</h2>
+              <h2 class="today-time">00:14:13</h2>
             </div>
             <div class="stat-grid">
               <p>Lessons:</p>
-              <h2>13</h2>
+              <h2 class="today-lessons">13</h2>
             </div>
             <div class="stat-grid">
               <p>Top Speed:</p>
-              <h2>120wpm</h2>
+              <h2 class="today-top-speed">120wpm</h2>
             </div>
             <div class="stat-grid">
               <p>Avg Speed:</p>
-              <h2>90wpm</h2>
+              <h2 class="today-avg-speed">90wpm</h2>
             </div>
             <div class="stat-grid">
               <p>Avg Accuracy:</p>
-              <h2>94.09%</h2>
+              <h2 class="today-avg-accuracy">94.09%</h2>
             </div>
           </div>
         </div>
@@ -143,7 +143,7 @@
     </div>
 
     <!-- scripts -->
-    <script src="scripts/app.js"></script>
+    <script type="module" src="scripts/profile.js"></script>
     <script src="https://unpkg.com/feather-icons"></script>
   </body>
 </html>
