--- a/index.html
+++ b/index.html
@@ -39,13 +39,9 @@
           <i class="fa-solid fa-trophy"></i>
           <p>Highscore</p>
         </a>
-        <a href="" class="col">
+        <a href="test.html" class="col">
           <i class="fa-solid fa-jet-fighter"></i>
           Typing Test
-        </a>
-        <a href="" class="col">
-          <i class="fa-solid fa-palette"></i>
-          <p>Themes</p>
         </a>
         <a href="" class="col">
           <i class="fa-regular fa-circle-question"></i>
