--- a/test.html
+++ b/test.html
@@ -119,7 +119,7 @@
     </div>
 
     <!-- scripts -->
-    <script type="module" src="scripts/profile.js"></script>
+    <script type="module" src="scripts/test.js"></script>
     <script src="https://unpkg.com/feather-icons"></script>
   </body>
 </html>
