--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
   </head>
   <body>
     <div class="container">
-      <div class="speed"></div>
-      <div class="timer">00:00</div>
-      <div class="acuracy"></div>
       <div class="sidebar">
         <div class="logo-col">
           <p>PandaTyping</p>
@@ -81,13 +78,17 @@
             <div>1</div>
             <div>2</div>
             <div>3</div>
-            <div>4</div>
           </div>
         </div>
         <div class="text-section">
           <div class="modal">Press Enter Key to start</div>
         </div>
         <!-- keyboard -->
+        <div class="stats-container">
+          <div class="speed"></div>
+          <div class="timer">00:00</div>
+          <div class="acuracy"></div>
+        </div>
         <div class="keyboard">
           <div class="keys-row">
             <div class="key key__esc">
