fix: text length

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
           </div>
           <div class="right-header">
             <i class="fa-solid fa-bell"></i>
-            <i class="fa-regular fa-user"></i>
+            <button class="acc-btn">Login</button>
+            <button class="acc-btn">Sign Up</button>
           </div>
         </div>
         <!-- settings -->
