build: login page

--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
           </div>
           <div class="right-header">
             <i class="fa-solid fa-bell"></i>
-            <button class="acc-btn">Login</button>
-            <button class="acc-btn">Sign Up</button>
+            <a href="login.html" class="acc-btn"><i class="fa-solid fa-user"></i> Login</a>
           </div>
         </div>
         <!-- settings -->
