--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
           </div>
           <div class="middle-setting">
             <div class="default"><i class="fa-solid fa-ghost"></i> default</div>
+            <div class="mode"><i class="fa-solid fa-user-ninja"></i> ninja</div>
           </div>
           <div class="right-setting sentences">
             <div class="words"><i class="fa-solid fa-font"></i> sentences</div>
