auth fromnt end

--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
             placeholder="Password"
             required=""
           />
-          <button>Sign up</button>
+          <button class="sign">Sign up</button>
         </form>
       </div>
 
@@ -68,7 +68,7 @@
             placeholder="Password"
             required=""
           />
-          <button>Login</button>
+          <button class="log">Login</button>
         </form>
       </div>
     </div>
