--- a/highscore.html
+++ b/highscore.html
@@ -64,7 +64,7 @@
         <!-- sidebar -->
         <div class="sidebar">
           <div class="logo-col">
-            <p>PandaTyping</p>
+            <p>TypingPanda</p>
             <img src="icons/panda.png" />
           </div>
           <a href="index.html" class="col">
