--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container">
       <div class="sidebar">
         <div class="logo-col">
-          <p>PandaTyping</p>
+          <p>TypingPanda</p>
           <img src="icons/panda.png">
         </div>
         <a href="index.html" class="col">
