--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
       <div class="shortcut-display">
           <div class="button-con">tab</div>
           or
-          <div class="button-con">enter</div>
+          <div class="button-con">escape</div>
           - restart test
       </div>
       <div class="footer">
