build: new cursor styles

--- a/index.html
+++ b/index.html
@@ -40,9 +40,18 @@
           <i class="fa-solid fa-jet-fighter"></i>
           Typing Test
         </a>
-        <a href="" class="col">
+        <a href="#" class="col">
           <i class="fa-regular fa-circle-question"></i>
           <p>Info</p>
+        </a>
+        <a href="#" class="col styles">
+          <i class="fa-solid fa-wand-magic"></i>
+          <p>style</p>
+          <div class="cursor-container">
+            <div class="cursor current-box"></div>
+            <div class="cursor current-bot"></div>
+            <div class="cursor current-left"></div>
+          </div>
         </a>
       </div>
       <div class="main">
