build: new cursor style

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <div class="cursor current-box"></div>
             <div class="cursor current-bot"></div>
             <div class="cursor current-left"></div>
+            <div class="cursor current-Abod"></div>
           </div>
         </a>
       </div>
