--- a/login.html
+++ b/login.html
@@ -1,78 +1,78 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Slide Navbar</title>
-    <link rel="stylesheet" type="text/css" href="slide navbar style.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="styles/login.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.css"
-      integrity="sha512-tx5+1LWHez1QiaXlAyDwzdBTfDjX07GMapQoFTS74wkcPMsI3So0KYmFe6EHZjI8+eSG0ljBlAQc3PQ5BTaZtQ=="
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/64d58efce2.js"
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    ></script>
+    <link rel="stylesheet" href="styles/login.css" />
+    <title>Sign in & Sign up Form</title>
   </head>
   <body>
-    <div class="main">
+    <div class="container">
+      <div class="forms-container">
+        <div class="signin-signup">
+          <form action="#" class="sign-in-form">
+            <h2 class="title">Sign in</h2>
+            <div class="input-field">
+              <i class="fas fa-envelope"></i>
+              <input id="log-email" type="text" placeholder="Email" />
+            </div>
+            <div class="input-field">
+              <i class="fas fa-lock"></i>
+              <input id="log-pass" type="password" placeholder="Password" />
+            </div>
+            <input id="log-btn" type="submit" value="Login" class="btn solid" />
+          </form>
+          <form action="#" class="sign-up-form">
+            <h2 class="title">Sign up</h2>
+            <div class="input-field">
+              <i class="fas fa-user"></i>
+              <input id="sign-username" type="text" placeholder="Username" />
+            </div>
+            <div class="input-field">
+              <i class="fas fa-envelope"></i>
+              <input id="sign-email" type="email" placeholder="Email" />
+            </div>
+            <div class="input-field">
+              <i class="fas fa-lock"></i>
+              <input id="sign-pass" type="password" placeholder="Password" />
+            </div>
+            <input id="sign-btn" type="submit" class="btn" value="Sign up" />
+          </form>
+        </div>
+      </div>
+
+      <div class="panels-container">
+        <div class="panel left-panel">
+          <div class="content">
+            <h3>New here ?</h3>
+            <p>
+              Signup now to Join super cool TypingPanda community, and your
+              progress will be saved.
+            </p>
+            <button class="btn transparent" id="sign-up-btn">Sign up</button>
+          </div>
+          <img src="pandakeyboard.png" class="image" alt="" />
+        </div>
+        <div class="panel right-panel">
+          <div class="content">
+            <h3>One of us ?</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
+              laboriosam ad deleniti.
+            </p>
+            <button class="btn transparent" id="sign-in-btn">Sign in</button>
+          </div>
+          <img src="pandakeyboard.png" class="image" alt="" />
+        </div>
+      </div>
+      <div class="back-to"><a href="index.html">Back to Home</a></div>
       <div class="error-box">some error massage</div>
-      <a href="index.html" class="back"
-        ><i class="fa-solid fa-arrow-left"></i> Back</a
-      >
-      <input type="checkbox" id="chk" aria-hidden="true" />
-
-      <div class="signup">
-        <form>
-          <label for="chk" aria-hidden="true">Sign up</label>
-          <input
-            id="sign-username"
-            type="text"
-            name="txt"
-            placeholder="User name"
-            required=""
-          />
-          <input
-            id="sign-email"
-            type="email"
-            name="email"
-            placeholder="Email"
-            required=""
-          />
-          <input
-            id="sign-pswd"
-            type="password"
-            name="pswd"
-            placeholder="Password"
-            required=""
-          />
-          <button class="sign">Sign up</button>
-        </form>
-      </div>
-
-      <div class="login">
-        <form>
-          <label for="chk" aria-hidden="true">Login</label>
-          <input
-            id="login-email"
-            type="email"
-            name="email"
-            placeholder="Email"
-            required=""
-          />
-          <input
-            id="login-pswd"
-            type="password"
-            name="pswd"
-            placeholder="Password"
-            required=""
-          />
-          <button class="log">Login</button>
-        </form>
-      </div>
     </div>
+
     <script src="scripts/login.js"></script>
   </body>
 </html>
