--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
             <img src="icons/keyboard.png" />
           </div>
           <div class="right-header">
-            <i class="fa-solid fa-bell"></i>
+            <div class="acc-icon">
+              <i class="fa-solid fa-bell "></i>
+              <i class="fa-solid fa-user"></i>
+            </div>
             <a href="login.html" class="acc-btn"><i class="fa-solid fa-user"></i> Login</a>
           </div>
         </div>
