--- a/highscore.html
+++ b/highscore.html
@@ -32,31 +32,6 @@
               <span>#</span>
               <span>Users</span>
               <span>Speed</span>
-              <span>Score</span>
-            </div>
-            <div class="rank-col">
-              <span>1.</span>
-              <span>Sensei</span>
-              <span>291 wpm</span>
-              <span>130000</span>
-            </div>
-            <div class="rank-col">
-              <span>1.</span>
-              <span>Sensei</span>
-              <span>291 wpm</span>
-              <span>130000</span>
-            </div>
-            <div class="rank-col">
-              <span>1.</span>
-              <span>Sensei</span>
-              <span>291 wpm</span>
-              <span>130000</span>
-            </div>
-            <div class="rank-col">
-              <span>1.</span>
-              <span>Sensei</span>
-              <span>291 wpm</span>
-              <span>130000</span>
             </div>
           </div>
         </div>
@@ -124,7 +99,7 @@
     </div>
 
     <!-- scripts -->
-    <script src="scripts/app.js"></script>
+    <script src="scripts/highscore.js"></script>
     <script src="https://unpkg.com/feather-icons"></script>
   </body>
 </html>
