build: username display

--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,7 @@
   <body>
     <div class="container">
       <div class="main">
-        <h1>Profile <span>@Sensei</span></h1>
+        <h1>Profile <span class="username">@Sensei</span></h1>
         <div class="stat-col">
           <h1>All Time Statistics</h1>
           <div class="stats-grid-container">
