--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <i class="fa-solid fa-trophy"></i>
           <p>Highscore</p>
         </a>
-        <a href="#" class="col">
+        <a href="https://github.com/sachu0dev/Typing_Panda" target="_blank" class="col">
           <i class="fa-regular fa-circle-question"></i>
           <p>Info</p>
         </a>
@@ -313,18 +313,43 @@
           <div class="button-con">escape</div>
           - restart test
       </div>
-      <div class="footer">
-        <div class="left-footer">
-          <a href="https://twitter.com/sachu0dev" target="_blank" class="contact"><i class="fa-solid fa-envelope"></i> Contact</a>
-          <a href="https://twitter.com/sachu0dev" target="_blank" class="gitHub"><i class="fa-brands fa-github"></i> Github</a>
-          <a href="https://twitter.com/sachu0dev" target="_blank" class="GitHub"><i class="fa-brands fa-square-x-twitter"></i> Twitter</a>
-          <a href="https://github.com/sachu0dev/TypingPanda" target="_blank" class="source-code"><i class="fa-solid fa-code"></i> Source Code</a>
-        </div>
-        <div class="right-footer">
-          <a href="https://twitter.com/sachu0dev" class="sachu"><i class="fa-solid fa-award"></i> Sushil.dev</a>
-          <!-- <div class="abhi"><i class="fa-solid fa-award"></i> Abhishek.dev</div> -->
-        </div>
+     <!-- footer -->
+     <div class="footer">
+      <div class="left-footer">
+        <a
+          href="https://mail.google.com/mail/?view=cm&fs=1&to=sushil.dev.in@gmail.com&su=Hire me.&body=Hey'&bcc=suahilkumar134@gmail.com"
+          class="contact"
+          target="_blank"
+        >
+          <i class="fa-solid fa-envelope"></i> Contact
+        </a>
+        <a
+          href="https://github.com/sachu0dev"
+          target="_blank"
+          class="gitHub"
+          ><i class="fa-brands fa-github"></i> Github</a
+        >
+        <a
+          href="https://twitter.com/sachu0dev"
+          target="_blank"
+          class="GitHub"
+        >
+          <i class="fa-brands fa-square-x-twitter"></i> Twitter
+        </a>
+        <a
+          href="https://github.com/sachu0dev/Typing_Panda"
+          class="source-code"
+          target="_blank"
+        >
+          <i class="fa-solid fa-code"></i> Source Code
+        </a>
       </div>
+      <div class="right-footer">
+        <a href="" class="sachu">
+          <i class="fa-solid fa-award"></i> Sushil.dev
+        </a>
+      </div>
+    </div>
       <div class="device-warning">
         <h1>Warning</h1>
         <p>Apologies for the inconvenience! Your current device is not compatible. Stay tuned for future updates. (Try pressing ctrl and - to zoom out if on a computer)</p>
