--- a/highscore.html
+++ b/highscore.html
@@ -23,6 +23,28 @@
   </head>
   <body>
     <div class="container">
+      <div class="sidebar">
+        <div class="logo-col">
+          <p>TypingPanda</p>
+          <img src="icons/panda.png" />
+        </div>
+        <a href="index.html" class="col">
+          <i class="fa-solid fa-keyboard"></i>
+          <p>Practice</p>
+        </a>
+        <a href="profile.html" class="col">
+          <i class="fa-solid fa-chart-simple"></i>
+          <p>Profile</p>
+        </a>
+        <a href="highscore.html" target="_blank" class="col">
+          <i class="fa-solid fa-trophy"></i>
+          <p>Highscore</p>
+        </a>
+        <a href="https://github.com/sachu0dev/Typing_Panda" class="col">
+          <i class="fa-regular fa-circle-question"></i>
+          <p>Info</p>
+        </a>
+      </div>
       <div class="main">
         <h1>World Ranking</h1>
         <div class="ranking-container">
@@ -37,61 +59,44 @@
         </div>
 
         <!-- sidebar -->
-        <div class="sidebar">
-          <div class="logo-col">
-            <p>TypingPanda</p>
-            <img src="icons/panda.png" />
-          </div>
-          <a href="index.html" class="col">
-            <i class="fa-solid fa-keyboard"></i>
-            <p>Practice</p>
-          </a>
-          <a href="profile.html" class="col">
-            <i class="fa-solid fa-chart-simple"></i>
-            <p>Profile</p>
-          </a>
-          <a href="" class="col">
-            <i class="fa-solid fa-trophy"></i>
-            <p>Highscore</p>
-          </a>
-          <a href="test.html" class="col">
-            <i class="fa-solid fa-jet-fighter"></i>
-            Typing Test
-          </a>
-          <a href="" class="col">
-            <i class="fa-regular fa-circle-question"></i>
-            <p>Info</p>
-          </a>
-        </div>
         <!-- footer -->
         <div class="footer">
           <div class="left-footer">
-            <div class="contact">
+            <a
+              href="https://mail.google.com/mail/?view=cm&fs=1&to=sushil.dev.in@gmail.com&su=Hire me.&body=Hey'&bcc=suahilkumar134@gmail.com"
+              class="contact"
+              target="_blank"
+            >
               <i class="fa-solid fa-envelope"></i> Contact
-            </div>
-            <div class="gitHub"><i class="fa-brands fa-github"></i> Github</div>
-            <div class="GitHub">
+            </a>
+            <a
+              href="https://github.com/sachu0dev"
+              target="_blank"
+              class="gitHub"
+              ><i class="fa-brands fa-github"></i> Github</a
+            >
+            <a
+              href="https://twitter.com/sachu0dev"
+              target="_blank"
+              class="GitHub"
+            >
               <i class="fa-brands fa-square-x-twitter"></i> Twitter
-            </div>
-            <div class="source-code">
+            </a>
+            <a
+              href="https://github.com/sachu0dev/Typing_Panda"
+              class="source-code"
+              target="_blank"
+            >
               <i class="fa-solid fa-code"></i> Source Code
-            </div>
+            </a>
           </div>
           <div class="right-footer">
-            <div class="sachu">
+            <a href="" class="sachu">
               <i class="fa-solid fa-award"></i> Sushil.dev
-            </div>
+            </a>
           </div>
         </div>
         <!-- warning -->
-        <div class="device-warning">
-          <h1>Warning</h1>
-          <p>
-            Apologies for the inconvenience! Your current device is not
-            compatible. Stay tuned for future updates. Thank you for your
-            understanding.
-          </p>
-        </div>
       </div>
     </div>
 
