fix: target blank on highscore

--- a/highscore.html
+++ b/highscore.html
@@ -36,7 +36,7 @@
           <i class="fa-solid fa-chart-simple"></i>
           <p>Profile</p>
         </a>
-        <a href="highscore.html" target="_blank" class="col">
+        <a href="highscore.html" class="col">
           <i class="fa-solid fa-trophy"></i>
           <p>Highscore</p>
         </a>
