build user progress chart

--- a/profile.html
+++ b/profile.html
@@ -101,6 +101,9 @@
             </div>
           </div>
         </div>
+        <div class="chart-container">
+          <canvas id="speedAccuracyChart" width="400" height="200"></canvas>
+        </div>
 
         <!-- sidebar -->
         <!-- footer -->
@@ -153,6 +156,8 @@
     </div>
 
     <!-- scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="scripts/chart.js"></script>
     <script type="module" src="scripts/profile.js"></script>
     <script src="https://unpkg.com/feather-icons"></script>
   </body>
