build: logout option

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
           </div>
           <div class="right-header">
             <div class="acc-icon">
-              <i class="fa-solid fa-bell "></i>
               <i class="fa-solid fa-user"></i>
+              <i class="fa-solid fa-right-from-bracket log-out"><Span>logout</Span></i>
             </div>
             <a href="login.html" class="acc-btn"><i class="fa-solid fa-user"></i> Login</a>
           </div>
