--- a/login.html
+++ b/login.html
@@ -61,8 +61,8 @@
           <div class="content">
             <h3>One of us ?</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
-              laboriosam ad deleniti.
+              Signin now to Join super cool TypingPanda community, and your
+              progress will be saved.
             </p>
             <button class="btn transparent" id="sign-in-btn">Sign in</button>
           </div>
