ch: slider design

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </div>
           <div class="right-header">
             <div class="acc-icon">
-              <i class="fa-solid fa-user"></i>
+              <a href="profile.html" class="user-profile"><i class="fa-solid fa-user"></i></a>
               <i class="fa-solid fa-right-from-bracket log-out"><Span>logout</Span></i>
             </div>
             <a href="login.html" class="acc-btn"><i class="fa-solid fa-user"></i> Login</a>
