--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           </div>
         </div>
         <div class="text-section">
-          <div class="modal">Press Enter Key to start</div>
+          <div class="modal">Getting paragraph...</div>
         </div>
         <!-- keyboard -->
         <div class="stats-container">
